--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -212,7 +212,7 @@
                                 <input type="submit" value="로그인">
                                 <div>
                                     <a href="{% url "common:login_find" %}">아이디/비밀번호 찾기</a>
-                                    <a href="{% url "common:signup" %}">회원가입</a>
+                                    <a href="#">회원가입</a>
                                 </div>
                             </fieldset>
                         </form>
@@ -324,7 +324,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <!-- side 공지사항 borad -->
                     <div class="borderBox">
                         <strong>공지사항<a href="#">+</a></strong>
