Google Analytics 추가(일단 내 계정으로 해놧음

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,15 @@
     <!-- CSS import -->
     <link rel="stylesheet" href="{% static 'css/import.css' %}">   <!-- main_tmp/css/import.css -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-825K7FEKWT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-825K7FEKWT');
+    </script>
     <title>Toch</title>
 </head>
 <body>
