--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <div class="subPage oneRoomPage">
         <section class="detailArea width1200">
@@ -38,20 +37,14 @@
                                             <button>전화</button>
                                             <button>문자</button>
                                         </div>
-                                        <span class="material-icons-outlined closeBtn">
-                                            ×
-                                        </span>
+                                        <span class="material-icons-outlined closeBtn">×</span>
                                     </div>
                                 </div>
                                 <button data-popup="loginRequired_popup">공유하기</button>
                                 <div class="loginRequired_popup">
                                     <div>
-                                        <p>
-                                            로그인이 필요한 서비스 입니다.
-                                        </p>
-                                        <span class="material-icons-outlined closeBtn">
-                                            ×
-                                        </span>
+                                        <p>로그인이 필요한 서비스 입니다.</p>
+                                        <span class="material-icons-outlined closeBtn">×</span>
                                     </div>
                                 </div>
                             </div>
