--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -139,10 +139,10 @@
         const container = document.querySelector('.myMap');
         const itemList = document.querySelector('.bottomArea > ul');
 
-        // Map & Marker 설정
-        let imageSrc = '../../static/images/maker.png'; // 마커이미지의 주소입니다
-        let imageSize = new kakao.maps.Size(30, 30); // 마커이미지의 크기입니다
-        let imageOption = {offset: new kakao.maps.Point(10, 30)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+        {#// Map & Marker 설정#}
+        {#let imageSrc = '../../static/images/maker.png'; // 마커이미지의 주소입니다#}
+        {#let imageSize = new kakao.maps.Size(30, 30); // 마커이미지의 크기입니다#}
+        {#let imageOption = {offset: new kakao.maps.Point(10, 30)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.#}
 
         // 지도 중심 좌표 설정
         const MNU_LATITUDE = 34.91124654247272;
@@ -191,27 +191,33 @@
 
         // 마커 생성, 지도 위에 표시
         function addMarker(info, marker_arr = current_markers) {
-            // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
-            var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
-                markerPosition = info.latlng; // 마커가 표시될 위치입니다
-
-            // 마커를 생성합니다
-            var marker = new kakao.maps.Marker({
-                position: markerPosition,
-                image: markerImage // 마커이미지 설정
-            });
-
-            // 마커에 click 이벤트를 등록합니다
-            kakao.maps.event.addListener(marker, 'click', function () {
+            // 커스텀 오버레이에 표시할 내용입니다
+            // HTML 문자열 또는 Dom Element 입니다
+            let content = document.createElement('div');
+            content.classList.add('custom_overlay');
+            content.textContent = 10;
+            content.onclick = () => {
                 removeAllRooms();
-                // 클릭한 마커에 해당되는 list 보여주기
                 renderRoom(info);
+            }
+
+            // 커스텀 오버레이를 생성합니다
+            let marker = new kakao.maps.CustomOverlay({
+                position: info.latlng,
+                content: content
             });
 
             marker_arr.push(marker);
             markers.push(marker)
             // 마커가 지도 위에 표시되도록 설정합니다.
             marker.setMap(map);
+
+            // 마커에 click 이벤트를 등록
+            const customOverlay = document.querySelector('.custom_overlay');
+            customOverlay.addEventListener('click', () => {
+                removeAllRooms();
+                renderRoom(info);
+            });
         }
 
         function removeAllMarkers() {
