--- a/templates/mobile_template/oneroom/oneroom_list.html
+++ b/templates/mobile_template/oneroom/oneroom_list.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Iphone 모바일 확대 방지 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0"
-    ">
-    <title>원룸 리스트 - toch</title>
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- 공통 script -->
-    <script src="../../../static/mobile/js/com.js"></script>
-    <!-- css -->
-    <link rel="stylesheet" href="../../../static/mobile/css/import.css">
-</head>
-<body>
+{% extends 'mobile_template/base.html' %}
+{% block content %}
 <div class="oneRoomPage">
     <header class="paddingBox">
         <h1>
@@ -160,16 +143,5 @@
 
         <a href="#" class="fixedLink">MAP</a>
     </div>
-
-    <nav>
-        <ul>
-            <li class="active"><a href="{% url 'mobile:oneroom_index' %}">원룸</a></li>
-            <li><a href="#">중고</a></li>
-            <li class="home"><a href="{% url 'mobile:index' %}">홈</a></li>
-            <li><a href="#">커뮤니티</a></li>
-            <li><a href="#">마이</a></li>
-        </ul>
-    </nav>
 </div>
-</body>
-</html>
+{% endblock %}
